<resources>
    <string name="app_name">Test</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entry_test">Entry Test</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="candidate">Candidate</string>
    <string name="admin">Admin</string>
    <string name="question">Question</string>
    <string name="Answer">Answer</string>
    <string name="sum">Sum</string>
    <string name="total">Total</string>
    <string name="Next">Previous</string>
    <string name="ok">Ok</string>
    <string name="time_up">Time\'s up</string>
    <string name="time">Time</string>
    <string name="Start">Start</string>
    <string name="result">Result</string>
    <string name="writing_point">Writing Point:</string>
    <string name="dev">Candidate</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="finish">Finish</string>
    <string name="position">Position</string>
    <string name="role">Role</string>
    <string name="intern">intern</string>
    <string name="lorum">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
